# notebooks

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  fastai-env.txt  fastai.yml  fastbook-env.txt  pydata-book.yml  pyproject.toml
.devenv/: devenv.json  flake.json
.devenv/gc/: shell-2-link
LLM101x/: LLM 01L - LLMs with Hugging Face Lab.ipynb
fastai/: README.md  bear_classifier.ipynb  bird.ipynb  brz_or_wrx.ipynb  hello.ipynb
fork/: OpenAI_Whisper_ASR_Demo.ipynb
gpt/: example_01.txt
machine_learning/: C1_W1_Lab03_Model_Representation_Soln.ipynb
notebooks/: hello_gptindex.ipynb  index.json  react_pattern.ipynb
notebooks/fastai/: brz_or_wrx.ipynb  hello.ipynb
output/react_pattern/: example_02.txt
prompt_engineering/: l2-guidelines.ipynb  l3-iterative-prompt-development.ipynb  l4-summarizing.ipynb  l5-inferring.ipynb  l6-transforming.ipynb  l7-expanding.ipynb  l8-chatbot.ipynb
pydata-book/: README.md
