[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Ziyun Li <me@ziyunli.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.4.3"
notebook = "^6.4.12"
voila = "^0.3.5"
pandas = "^1.4.2"
jupyter = "^1.0.0"
ipykernel = "^6.15.0"
matplotlib = "^3.5.2"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
