[tool.poetry]
name = "notebooks"
version = "0.0.1"
description = ""
authors = ["Ziyun Li <me@ziyunli.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^3.6.3"
voila = "^0.4.0"
llama-index = "^0.5.10"
langchain = "^0.0.134"
python-dotenv = "^1.0.0"
ipywidgets = "^8.0.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
black = "^23.3.0"
nbqa = {extras = ["toolchain"], version = "^1.7.0"}
pre-commit = "^3.2.2"
blacken-docs = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
